Fix loading not centered

--- a/_sass/right-list.scss
+++ b/_sass/right-list.scss
@@ -31,6 +31,7 @@
         background-color: #ececec;
         overflow-y: auto;
         overflow-x: hidden;
+        flex: 1;
 
         #list-posts {
             display: flex;
